src/app/explore/explore.component.css
#searchbox {
    margin: 10px 5%;
    white-space: nowrap;
}

.margin-card {
    background-color: #f2f2f2;
    border-radius: 4px;
    width: 42%;
    margin-bottom: 0.5em;
    margin-left: 1%;
    display: inline-block;
}

.section-main {
    width: 96%;
    margin-left: 4%;
}

.searchinput {
    min-width: 40%;
}

.header {
    margin-left: 7%;
    margin-bottom: 0.5em;
    margin-top: 0.3em;
}

.header span {
    margin-right: 20px;
    color: #a0a0a0;
    cursor: pointer;
}

.header .selected {
    color: black;
}

@media (max-width: 768px) {
    .searchinput {
        min-width: 60%;
    }

    .margin-card {
        width: 90%;
    }
}

@media (max-width: 560px) {
    .searchinput {
        min-width: 80%;
    }

    .margin-card {
        width: 90%;
    }
}

